# electionguard-kotlin-multiplatform

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SECURITY.md  build.gradle.kts  dependencies.txt  gradle.properties  qodana.yaml  settings.gradle.kts  yarn.lock.bak
.github/workflows/: codeql.yml  unit-tests.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: electionguard.common-conventions.gradle.kts  electionguard.webapps-conventions.gradle.kts
cmake/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake
docs/: CodingConventions.md  CommandLineInterface.md  CryptographyNotes.md  ElectionRecord.md  ElectionRecordJson.md  ElectionRecordProto.md  Encryption.md  GettingStarted.md  ImplementationNotes.md  InputValidation.md  JsonSerialization.md  JsonSerializationSpec1.9.md  PreencryptSerialization.md  Preencryption.md  ProtoSerializationPrivate.md  ProtoSerializationSpec1.51.md  ProtoSerializationSpec1.52.md  ProtoSerializationSpec1.53.md  ProtoSerializationSpec1.9.md  ProtoSerializationSpec1.md  ProtoSerializationSpec2.md  RemoteKeyCeremony.md  RemoteKeyCeremonyTrustee.md  SerializationSpec.md  TallyValidation.md  TestVectors.md  Verification.md  commandLineInterface.md
egklib/: build.gradle.kts
egklib/src/commonMain/proto/: common.proto  decrypted_tally.proto  election_record.proto  encrypted_ballot.proto  encrypted_tally.proto  manifest.proto  plaintext_ballot.proto  trustees.proto
egklib/src/commonTest/data/allAvailable/: decryptionResult.protobuf  electionInitialized.protobuf  encryptedBallots.protobuf  tallyResult.protobuf
egklib/src/commonTest/data/allAvailableJson/: electionInitialized.json  election_config.json  election_initialized.json  encrypted_tally.json  tally.json
egklib/src/commonTest/data/runWorkflowAllAvailable/: decryptionResult.protobuf  electionInitialized.protobuf  encryptedBallots.protobuf  tallyResult.protobuf
egklib/src/commonTest/data/runWorkflowSomeAvailable/: decryptionResult.protobuf  electionInitialized.protobuf  encryptedBallots.protobuf  spoiledBallotTallies.protobuf  tallyResult.protobuf
egklib/src/commonTest/data/someAvailable/: challengedBallots.protobuf  decryptionResult.protobuf  electionInitialized.protobuf  encryptedBallots.protobuf  spoiledBallotTallies.protobuf  tallyResult.protobuf
egklib/src/commonTest/data/someAvailableJson/: electionInitialized.json  election_config.json  election_initialized.json  encrypted_tally.json  tally.json
egklib/src/commonTest/data/start/: electionConfig.protobuf  manifest.protobuf
egklib/src/commonTest/data/startConfigJson/: election_config.json  manifest.json
egklib/src/commonTest/data/startConfigProto/: electionConfig.protobuf
egklib/src/commonTest/data/startJson/: manifest.json
egklib/src/commonTest/data/startManifestJson/: manifest.json
egklib/src/commonTest/data/startManifestProto/: manifest.protobuf
egklib/src/jvmTest/resources/: logback-test.xml
egklib/src/nativeInterop/: libhacl.def
egkliball/: build.gradle.kts
egkliball/src/main/resources/: logback.xml
gradle/: libs.versions.toml
hacllib/: build.gradle.kts
hacllib/cmake/: CheckCXXCompilerFlag.cmake  OptimizeForArchitecture.cmake
hacllib/nativeInterop/: libhacl.def
hacllib/src/nativeInterop/cinterop/: libhacl.def
libhacl/src/: Lib_Memzero0.c
src/commonMain/kotlin/electionguard/: Base16.kt  Base64.kt  ChaumPedersen.kt  ConcurrentMutableMap.kt  DLog.kt  ElGamal.kt  Group.kt  GroupCommon.kt  Hash.kt  Nonces.kt  PlatformRandom.kt  PowRadix.kt  SHA256.kt  Schnorr.kt  TestDLog.kt  TestGroup.kt  TinyDLog.kt  TinyGroup.kt  Utils.kt
src/commonMain/kotlin/electionguard/ballot/: Manifest.kt  (+19 more)
src/commonMain/proto/: ciphertext_ballot.proto  ciphertext_tally.proto  common.proto  decrypted_tally.proto  election_record.proto  election_record_bridge.proto  election_record_ver1.proto  encrypted_ballot.proto  manifest.proto  plaintext_ballot.proto  plaintext_tally.proto  trustees.proto
src/commonTest/data/runWorkflow/: decryptionResult.protobuf  electionInitialized.protobuf  tallyResult.protobuf
src/commonTest/data/runWorkflowAllAvailable/: decryptionResult.protobuf  electionInitialized.protobuf  encryptedBallots.protobuf  tallyResult.protobuf
src/commonTest/data/runWorkflowSomeAvailable/: decryptionResult.protobuf  electionInitialized.protobuf  encryptedBallots.protobuf  spoiledBallotTallies.protobuf  tallyResult.protobuf
src/commonTest/kotlin/electionguard/: ChaumPedersenTest.kt  DLogTest.kt  ElGamalTests.kt  GroupTest.kt  HashTest.kt  KotestGenerators.kt  KotestRunner.kt  NoncesTest.kt  RandomTest.kt  SchnorrTest.kt  TestGroup.kt  TestPowRadix.kt  TestUtilities.kt
src/jsMain/kotlin/electionguard/: ConcurrentMutableMap.kt  CryptoJs.kt  DLog.kt  ElGamalBenchmark.kt  Group.kt  JsCrypto.kt  PlatformRandom.kt  SHA256.kt  Utils.kt
src/jsTest/kotlin/electionguard/: KotestRunner.kt  TestConstants.kt  TestJsCrypto.kt
src/jvmMain/kotlin/electionguard/: ConcurrentMutableMap.kt  DLog.kt  ElGamalBenchmark.kt  Group.kt  PlatformRandom.kt  PrintConstants.kt  SHA256.kt
src/jvmMain/kotlin/publish/: CloseableIterator.kt  Consumer.kt  Publisher.kt
src/jvmMain/resources/: logback.xml
src/jvmTest/kotlin/electionguard/: DLogParallelTest.kt  TestBase16.kt  TestBase64.kt  TestConstants.kt
src/jvmTest/resources/: logback-test.xml
src/nativeInterop/: libhacl.def
src/nativeMain/kotlin/: PerfTest.kt
src/nativeMain/kotlin/electionguard/: ConcurrentMutableMap.kt  DLog.kt  ElGamalBenchmark.kt  Group.kt  PlatformRandom.kt  SHA256.kt  SecureRandom.kt
src/nativeTest/kotlin/: TestConstants.kt
src/nativeTest/kotlin/electionguard/: KotestRunner.kt  TestConstants.kt
testOut/jvm/runBatchEncryption/election_record/: electionRecord.protobuf
webapps/decryptingtrustee/: build.gradle.kts
webapps/decryption/: build.gradle.kts
webapps/keyceremony/: build.gradle.kts
webapps/keyceremonytrustee/: build.gradle.kts
webapps/keyceremonytrustee/src/test/: GuardianRequests.http
(+1988 files in other folders)
